--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "howler",
+  "name": "howler-but-with-updates",
   "version": "2.0.15",
   "description": "Javascript audio library for the modern web.",
   "homepage": "https://howlerjs.com",
